Prepare for v1.0.0 release
- Clean up project structure: move docs to docs/, tests to tests/
- Remove outdated session reports and duplicate documentation
- Update README.md with GitHub standards (badges, structure, current features)
- Update .gitignore: add user_settings.json
- Add user_settings.json.example for new users
- Update requirements.txt: add sounddevice, remove unused rtmixer
- Update environment.yml: sync with requirements.txt, add missing dependencies
- All dependencies verified and complete

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ Thumbs.db
 # User settings
 .env
 config_local.py
+user_settings.json
 
 # PyInstaller / Packaging
 # Note: .spec files ARE tracked (they're build configuration)
