--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ audio-separator>=0.20.0
 
 # System Audio Recording
 soundcard>=0.4.2
-rtmixer>=0.1.7
+
+# Audio Playback
+sounddevice>=0.4.6  # Audio playback (migrated from rtmixer)
 
 # Audio Processing
 numpy>=1.24.0
