Add LARS service integration, UI enhancements, and build updates
- Add LARS service packaging and integration
- Add enhanced statusbar and drum details widget
- Update build scripts and specs
- Add LARS service client and tests
- Update main window and separation subprocess
- Add LARS phase 1 plan documentation

--- a/environment.yml
+++ b/environment.yml
@@ -38,6 +38,7 @@ dependencies:
       - tqdm>=4.66.0
       - colorlog>=6.8.0
       - PyYAML>=6.0.0  # For YAML configuration files
+      - psutil>=5.9.0
 
       # Testing
       - pytest>=7.4.0
