--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ user_settings.json
 # Note: .spec files ARE tracked (they're build configuration)
 dist/StemSeparator.app/
 dist/StemSeparator/
+dist/*.dmg
 build/
 *.app
 packaging/icon.icns
