Checkpoint: Save state before implementing Cmd+Q freeze fix
Preparing to fix app freeze when quitting immediately after startup.
The freeze occurs when BeatNet warmup subprocess is blocked by XProtect scanning.
This commit saves current state before implementing cancellation mechanism.

--- a/user_settings.json.example
+++ b/user_settings.json.example
@@ -5,7 +5,7 @@
   "quality_preset": "balanced",
   "use_gpu": true,
   "chunk_length_seconds": 300,
-  "output_directory": "temp/separated",
+  "output_directory": "~/Music/StemSeparator/separated",
   "recording_sample_rate": 44100,
   "recording_channels": 2
 }
